--- a/client/public/index.html
+++ b/client/public/index.html
@@ -16,6 +16,8 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <script src="https://kit.fontawesome.com/1366096cad.js" crossorigin="anonymous"></script>
+    <script src="https://js.stripe.com/v3/"></script>
+    <script src="tinymce/tinymce.min.js"></script>
 
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
